# sport_assistant

./: .gitignore  pyproject.toml  todo.md
notebooks/: Untitled.ipynb  api_test_responses.ipynb
sport_assistant/backend/: backend.py
sport_assistant/backend/api_caller/: api_caller.py
sport_assistant/backend/constants/: api_methods.py
sport_assistant/backend/utils/: user.py
tests/: openai_test.py  test_types.py
